# use_FM

./: .gitignore  CMakeLists.txt
resources/: BitVector.cpp  FMIndex.cpp  FMIndex.h
src/: FMCommands.h  extension.py  fastaReader.cpp  fastaReader.h  main.cpp  mu_commands.h  pbar.cpp  pbar.h  primer_design.cpp  primer_design.h  spammodule.cpp  spammodule.h
test/: test_primer_design.h
